# discord-tts

./: .gitignore  LICENSE  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py
discord_tts/: __init__.py  call.py  cog.py  database.py  run.py  start.py  util.py  voicemanager.py
discord_tts/vv_wrapper/: __init__.py  call.py  database.py  dictionary.py  engine.bat  sql.py
