[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-tts3"
version = "0.1.0"
description = "A Discord Text to Speech bot using VoiceVox."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "py-cord>=2.6.1",
    "PyNaCl>=1.5.0",
    "google-re2==1.1.20240702",
    "python-dotenv",
    "requests"
]

